# waddle-web

./: CLAUDE.md  README.md  waddle-web.code-workspace
.github/workflows/: waddle-api.yml  waddle-ui.yml  waddle-web-e2e.yml
docs/api/: v1-design.md
waddle-api/: .gitignore  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
waddle-api/alembic/: README  env.py
waddle-api/app/: __init__.py  db.py  defaults.py  main.py  models.py
waddle-api/app/v1/: router.py  utils.py
waddle-api/tests/: main_test.py  v1_test.py
waddle-api/tests/ep0/: .gitignore
waddle-ui/: .gitignore  CLAUDE.md  biome.json  cypress.config.js  openapi-ts.config.ts  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
waddle-ui/cypress/e2e/: episodes.cy.ts
waddle-ui/cypress/fixtures/: episodes.json
waddle-ui/cypress/support/: commands.ts
waddle-ui/src/: App.tsx  main.tsx  routeTree.gen.ts
waddle-ui/src/client/: client.gen.ts  sdk.gen.ts  types.gen.ts
waddle-ui/src/components/ui/: card.tsx  slider.tsx  toaster.tsx
waddle-ui/src/routes/: episodes.new.tsx  index.tsx
